--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Example page for my-react-typescript-package"
-    />
-    <title>authflow-js</title>
-  </head>
-  <body>
+    <meta name="description" content="Demo page for authflow-js" />
+    <title>Demo page of authflow-js</title>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
     <div id="root"></div>
-  </body>
+</body>
+
 </html>
